--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <h2>Por que esse cardápio é diferente?</h2>
         <p>Ele foi desenvolvido com **base científica e experiência prática** para garantir que você possa comer bem, sem restrições extremas e mantendo sua energia e disposição!</p>
         
-        <a href="#" class="button">Quero Acessar Meu Cardápio Agora!</a>
+        <a href="https://suitsales.suitpay.app/e7Col96e" class="button">Quero Acessar Meu Cardápio Agora!</a>
     </div>
 </body>
 </html>
