--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cardápio Saudável - Coma Bem e Emagreça</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
+            overflow-x: hidden;
         }
         .header {
             background: #27ae60;
@@ -18,6 +20,7 @@
             padding: 20px 10px;
             font-size: 24px;
             font-weight: bold;
+            animation: fadeInDown 1s ease-in-out;
         }
         .container {
             max-width: 900px;
@@ -27,6 +30,9 @@
             border-radius: 10px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
             text-align: center;
+            opacity: 0;
+            transform: translateY(50px);
+            transition: opacity 0.8s ease-out, transform 0.8s ease-out;
         }
         h1, h2 {
             color: #27ae60;
@@ -45,15 +51,21 @@
             text-decoration: none;
             border-radius: 5px;
             margin-top: 20px;
-            transition: background 0.3s ease-in-out;
+            transition: all 0.3s ease-in-out;
+            box-shadow: 0px 5px 15px rgba(39, 174, 96, 0.4);
         }
         .button:hover {
             background: #219150;
+            transform: scale(1.05);
+            box-shadow: 0px 8px 20px rgba(39, 174, 96, 0.5);
         }
         .image {
             max-width: 60%;
             border-radius: 10px;
             margin-bottom: 20px;
+            opacity: 0;
+            transform: scale(0.8);
+            transition: opacity 0.8s ease-in-out, transform 0.8s ease-in-out;
         }
         .benefits {
             display: flex;
@@ -68,6 +80,9 @@
             width: 250px;
             text-align: center;
             font-size: 16px;
+            opacity: 0;
+            transform: translateY(30px);
+            transition: opacity 0.8s ease-in-out, transform 0.8s ease-in-out;
         }
         .image-container {
             display: flex;
@@ -78,13 +93,39 @@
         .image-container img {
             width: 45%;
             border-radius: 10px;
+            opacity: 0;
+            transform: translateY(30px);
+            transition: opacity 0.8s ease-in-out, transform 0.8s ease-in-out;
+        }
+        /* Responsividade */
+        @media (max-width: 768px) {
+            .benefit {
+                width: 100%;
+            }
+            .image-container img {
+                width: 80%;
+            }
+        }
+        /* Animações */
+        @keyframes fadeInDown {
+            from {
+                opacity: 0;
+                transform: translateY(-20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
     </style>
 </head>
 <body>
+
     <div class="header">💪 Dieta Inteligente: Coma Bem, Emagreça com Saúde! 🥗</div>
+
     <div class="container">
         <img src="https://raw.githubusercontent.com/comerciodigital/Pagina-de-obrigado/refs/heads/main/DALL%C2%B7E%202025-03-11%2012.17.14%20-%20A%20small%20bowl%20with%20mixed%20nuts%20including%20almonds%2C%20walnuts%2C%20and%20Brazil%20nuts%2C%20next%20to%20a%20small%20portion%20of%20sliced%20avocado%20and%20a%20scoop%20of%20vanilla%20whey%20protei.webp" alt="Nozes e abacate" class="image">
+
         <h1>Chega de passar fome! Seu novo cardápio saudável está aqui! 🍽️</h1>
         <p>Já pensou em perder peso sem abrir mão de refeições saborosas e nutritivas? Nosso cardápio foi desenvolvido para que você coma bem, sem culpa, e alcance seus objetivos de forma saudável!</p>
         
@@ -108,5 +149,23 @@
         
         <a href="https://suitsales.suitpay.app/e7Col96e" class="button">Quero Acessar Meu Cardápio Agora!</a>
     </div>
+
+    <script>
+        $(document).ready(function() {
+            $(".container").css({ "opacity": "1", "transform": "translateY(0)" });
+            $(".image").css({ "opacity": "1", "transform": "scale(1)" });
+
+            $(window).on("scroll", function() {
+                $(".benefit, .image-container img").each(function() {
+                    let elementTop = $(this).offset().top;
+                    let windowBottom = $(window).scrollTop() + $(window).height();
+                    if (elementTop < windowBottom - 50) {
+                        $(this).css({ "opacity": "1", "transform": "translateY(0)" });
+                    }
+                });
+            });
+        });
+    </script>
+
 </body>
 </html>
